app/modules/header.styl
$main_color = rgba(#6e3124, 0.73)// rgb(110, 36, 90)
.header
  background-image url(http://ebookfriendly.com/wp-content/uploads/2013/11/Library-a-book-wallpaper-540x405.jpg)
  color #fff
  box-shadow 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)
  &-titlerow
    align-items stretch
    background-color $main_color

  &-title
    padding 1rem
  h1
    font-size 1.3rem
  &-icon
    padding 0 .25rem
    i
      font-size 1.3rem

.circle
  width 2rem
  height 2rem
  border-radius 50%
  transition background-color .4s ease
  &:hover
    background-color #bdb2b24d

.header-icon.active
  .circle
    background-color #bdb2b24d

.nav
  display none
  &.show
    display flex
  position relative
  flex-flow row nowrap
  align-items stretch
  overflow-x scroll
  &-active
    position absolute
    bottom 0px
    transition all .4s ease
    left 0
    width 4.5rem
    padding 2px
    background white
  &-item
    padding 1rem
    // flex 1
    padding-top 1.25rem
    align-self stretch
    user-select none
    list-style none
    transition background-color .4s ease
    &:hover
      background-color #bdb2b24d
.nav-bottom .nav-item
  padding .5rem 1rem 1rem 1rem
  background-color $main_color



.ellipsis-tog.active
  z-index 4
.ellipsis-fullscreen
  background rgba(0,0,0,.5)
  height 100vh
  width 100vw
  position fixed
  top 0
  left 0
  z-index 3
  display none
  flex-flow row wrap
  align-items flex-start
  justify-content flex-end
  padding 3rem 1rem 0 0
  &.show
    display flex

.ellipsis-menu
  background #fafafa
  color black
  border-radius .25rem
  box-shadow 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23)
  li
    user-select none
    list-style none
    padding 1rem
    min-width 11rem
    transition background .4s ease
    &:hover
    &.active
      background #bdb2b24d

